--- a/index.html
+++ b/index.html
@@ -7,14 +7,19 @@
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
-	<script src="/library/js/howler.js"></script>
+	<script src="library/js/howler.js"></script>
+	<script src="library/js/ui.js"></script>
 	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.js"></script> -->
 
 	<!-- <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.css"> -->
 	<!-- <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css"> -->
-	<link rel="stylesheet" href="lib/css/style.css">
+	<link rel="stylesheet" href="library/css/style.css">
 </head>
 <body>
-
+	<main class="main">
+		<div class="dock"></div>
+		<div class="item"></div>
+		<div class="target"></div>
+	</main>
 </body>
 </html>
