tweaking grunt & index

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 	<main class="main">
-    	<h1>6 Music Hack</h1>
+    	<h1>Heli Music</h1>
 		<div class="dock"></div>
 		<div class="item"></div>
 		<div class="target"></div>
