--- a/index.html
+++ b/index.html
@@ -21,16 +21,30 @@
 <body>
 	<main class="main">
 		<div class="audio-dock audio-dock--left">
-			<svg class="audio-block audio-block--hexa" width="88px" height="100px" viewBox="0 0 88 100" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns">
-			    <title>hexa</title>
-			    <desc>Created with Sketch.</desc>
-			    <defs></defs>
-			    <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" sketch:type="MSPage">
-			        <g id="Artboard-1" sketch:type="MSArtboardGroup" transform="translate(-304.000000, -35.000000)" fill="#D8D8D8">
-			            <polygon id="hexa" sketch:type="MSShapeGroup" points="348 35 391.30127 60 391.30127 110 348 135 304.69873 110 304.69873 60 "></polygon>
-			        </g>
-			    </g>
-			</svg>
+			<div class="audio-dock-cell">
+				Cell 1
+			</div>
+			<div class="audio-dock-cell">
+				Cell 2
+			</div>
+			<div class="audio-dock-cell">
+				Cell 3
+			</div>
+			<div class="audio-dock-cell">
+				Cell 4
+			</div>
+			<div class="audio-dock-cell">
+				Cell 5
+			</div>
+			<div class="audio-dock-cell">
+				Cell 6
+			</div>
+			<div class="audio-dock-cell">
+				Cell 7
+			</div>
+			<div class="audio-dock-cell">
+				Cell 8
+			</div>
 		</div>
 
 		<section class="audio-target-container">
