--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script> -->
     <script src="library/js/jquery-2.2.0.js"></script>
-    <script src="library/js/jquery-ui/jquery-2.2.0.js"></script>
+    <script src="library/js/jquery-ui/jquery-ui.js"></script>
 	<script src="library/js/howler.js"></script>
-	<script src="/library/js/audio.js"></script>
+	<script src="library/js/audio.js"></script>
 	<script src="library/js/ui.js"></script>
 	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.js"></script> -->
 
