getting cells done

--- a/index.html
+++ b/index.html
@@ -20,45 +20,83 @@
 </head>
 <body>
 	<main class="main">
+
 		<div class="audio-dock audio-dock--left">
-<<<<<<< HEAD
-			<div class="audio-dock-cell">
-				Cell 1
-			</div>
-			<div class="audio-dock-cell">
-				Cell 2
-			</div>
-			<div class="audio-dock-cell">
-				Cell 3
-			</div>
-			<div class="audio-dock-cell">
-				Cell 4
-			</div>
-			<div class="audio-dock-cell">
-				Cell 5
-			</div>
-			<div class="audio-dock-cell">
-				Cell 6
-			</div>
-			<div class="audio-dock-cell">
-				Cell 7
-			</div>
-			<div class="audio-dock-cell">
-				Cell 8
-=======
-			<div class="audio-block audio-block--hexa">
-				<svg class="audio-block__svg" viewBox="0 0 88 100" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns">
-				    <title>hexa</title>
+		
+		<div class="audio-dock-cell">
+			<div class="audio-block audio-block__circle">
+				<svg viewBox="0 0 100 100" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns">
+				    <!-- Generator: Sketch 3.5.1 (25234) - http://www.bohemiancoding.com/sketch -->
+				    <title>circle</title>
 				    <desc>Created with Sketch.</desc>
 				    <defs></defs>
 				    <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" sketch:type="MSPage">
-				        <g id="Artboard-1" sketch:type="MSArtboardGroup" transform="translate(-304.000000, -35.000000)" fill="#D8D8D8">
-				            <polygon id="hexa" sketch:type="MSShapeGroup" points="348 35 391.30127 60 391.30127 110 348 135 304.69873 110 304.69873 60 "></polygon>
+				        <g id="Artboard-1" sketch:type="MSArtboardGroup" transform="translate(-171.000000, -35.000000)" fill="#D8D8D8">
+				            <circle id="circle" sketch:type="MSShapeGroup" cx="221" cy="85" r="50"></circle>
 				        </g>
 				    </g>
 				</svg>
->>>>>>> d901cf9fa46b43bc295f6481a25cc6089d4f22a7
 			</div>
+		</div>
+		<div class="audio-dock-cell">
+			<div class="audio-block audio-block__circle">
+				<svg viewBox="0 0 100 100" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns">
+				    <!-- Generator: Sketch 3.5.1 (25234) - http://www.bohemiancoding.com/sketch -->
+				    <title>circle</title>
+				    <desc>Created with Sketch.</desc>
+				    <defs></defs>
+				    <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" sketch:type="MSPage">
+				        <g id="Artboard-1" sketch:type="MSArtboardGroup" transform="translate(-171.000000, -35.000000)" fill="#D8D8D8">
+				            <circle id="circle" sketch:type="MSShapeGroup" cx="221" cy="85" r="50"></circle>
+				        </g>
+				    </g>
+				</svg>
+			</div>
+		</div>
+		<div class="audio-dock-cell">
+			<div class="audio-block audio-block__square">
+				<svg viewBox="0 0 100 100" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns">
+				    <!-- Generator: Sketch 3.5.1 (25234) - http://www.bohemiancoding.com/sketch -->
+				    <title>square</title>
+				    <desc>Created with Sketch.</desc>
+				    <defs></defs>
+				    <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" sketch:type="MSPage">
+				        <g id="Artboard-1" sketch:type="MSArtboardGroup" transform="translate(-44.000000, -35.000000)" fill="#D8D8D8">
+				            <rect id="square" sketch:type="MSShapeGroup" x="44" y="35" width="100" height="100"></rect>
+				        </g>
+				    </g>
+				</svg>
+			</div>
+		</div>
+		<div class="audio-dock-cell">
+			<div class="audio-block audio-block__star">
+				<svg viewBox="0 0 98 98" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns">
+				    <!-- Generator: Sketch 3.5.1 (25234) - http://www.bohemiancoding.com/sketch -->
+				    <title>star</title>
+				    <desc>Created with Sketch.</desc>
+				    <defs></defs>
+				    <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" sketch:type="MSPage">
+				        <g id="Artboard-1" sketch:type="MSArtboardGroup" transform="translate(-184.000000, -184.000000)" fill="#D8D8D8">
+				            <polygon id="star" sketch:type="MSShapeGroup" points="233 274.438356 220.059048 281.296291 212.280822 268.886669 197.644661 268.355339 197.113331 253.719178 184.703709 245.940952 191.561644 233 184.703709 220.059048 197.113331 212.280822 197.644661 197.644661 212.280822 197.113331 220.059048 184.703709 233 191.561644 245.940952 184.703709 253.719178 197.113331 268.355339 197.644661 268.886669 212.280822 281.296291 220.059048 274.438356 233 281.296291 245.940952 268.886669 253.719178 268.355339 268.355339 253.719178 268.886669 245.940952 281.296291 "></polygon>
+				        </g>
+				    </g>
+				</svg>
+			</div>
+		</div>
+
+		<div class="audio-block audio-block--circle">
+			<svg viewBox="0 0 100 100" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns">
+			    <!-- Generator: Sketch 3.5.1 (25234) - http://www.bohemiancoding.com/sketch -->
+			    <title>circle</title>
+			    <desc>Created with Sketch.</desc>
+			    <defs></defs>
+			    <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" sketch:type="MSPage">
+			        <g id="Artboard-1" sketch:type="MSArtboardGroup" transform="translate(-171.000000, -35.000000)" fill="#D8D8D8">
+			            <circle id="circle" sketch:type="MSShapeGroup" cx="221" cy="85" r="50"></circle>
+			        </g>
+			    </g>
+			</svg>
+		</div>
 		</div>
 
 		<section class="audio-target-container">
@@ -76,16 +114,67 @@
 		</section>
 
 		<div class="audio-dock audio-dock--right">
-			<svg class="audio-block audio-block--hexa" width="88px" height="100px" viewBox="0 0 88 100" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns">
-			    <title>hexa</title>
-			    <desc>Created with Sketch.</desc>
-			    <defs></defs>
-			    <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" sketch:type="MSPage">
-			        <g id="Artboard-1" sketch:type="MSArtboardGroup" transform="translate(-304.000000, -35.000000)" fill="#D8D8D8">
-			            <polygon id="hexa" sketch:type="MSShapeGroup" points="348 35 391.30127 60 391.30127 110 348 135 304.69873 110 304.69873 60 "></polygon>
-			        </g>
-			    </g>
-			</svg>
+			
+			<div class="audio-dock-cell">
+				<div class="audio-block audio-block__tri">
+					<svg viewBox="0 0 120 100" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns">
+					    <!-- Generator: Sketch 3.5.1 (25234) - http://www.bohemiancoding.com/sketch -->
+					    <title>tri</title>
+					    <desc>Created with Sketch.</desc>
+					    <defs></defs>
+					    <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" sketch:type="MSPage">
+					        <g id="Artboard-1" sketch:type="MSArtboardGroup" transform="translate(-34.000000, -183.000000)" fill="#D8D8D8">
+					            <polygon id="tri" sketch:type="MSShapeGroup" points="94 183 154 283 34 283 "></polygon>
+					        </g>
+					    </g>
+					</svg>
+				</div>
+			</div>
+			<div class="audio-dock-cell">
+				<div class="audio-block audio-block__square">
+					<svg viewBox="0 0 100 100" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns">
+					    <!-- Generator: Sketch 3.5.1 (25234) - http://www.bohemiancoding.com/sketch -->
+					    <title>square</title>
+					    <desc>Created with Sketch.</desc>
+					    <defs></defs>
+					    <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" sketch:type="MSPage">
+					        <g id="Artboard-1" sketch:type="MSArtboardGroup" transform="translate(-44.000000, -35.000000)" fill="#D8D8D8">
+					            <rect id="square" sketch:type="MSShapeGroup" x="44" y="35" width="100" height="100"></rect>
+					        </g>
+					    </g>
+					</svg>
+				</div>
+			</div>
+			<div class="audio-dock-cell">
+				<div class="audio-block audio-block__circle">
+					<svg viewBox="0 0 100 100" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns">
+					    <!-- Generator: Sketch 3.5.1 (25234) - http://www.bohemiancoding.com/sketch -->
+					    <title>circle</title>
+					    <desc>Created with Sketch.</desc>
+					    <defs></defs>
+					    <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" sketch:type="MSPage">
+					        <g id="Artboard-1" sketch:type="MSArtboardGroup" transform="translate(-171.000000, -35.000000)" fill="#D8D8D8">
+					            <circle id="circle" sketch:type="MSShapeGroup" cx="221" cy="85" r="50"></circle>
+					        </g>
+					    </g>
+					</svg>
+				</div>
+			</div>
+			<div class="audio-dock-cell">
+				<div class="audio-block audio-block__circle">
+					<svg viewBox="0 0 100 100" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns">
+					    <!-- Generator: Sketch 3.5.1 (25234) - http://www.bohemiancoding.com/sketch -->
+					    <title>circle</title>
+					    <desc>Created with Sketch.</desc>
+					    <defs></defs>
+					    <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" sketch:type="MSPage">
+					        <g id="Artboard-1" sketch:type="MSArtboardGroup" transform="translate(-171.000000, -35.000000)" fill="#D8D8D8">
+					            <circle id="circle" sketch:type="MSShapeGroup" cx="221" cy="85" r="50"></circle>
+					        </g>
+					    </g>
+					</svg>
+				</div>
+			</div>
 		</div>	
 	</main>
 </body>
