--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		</div>
 
 		<section class="audio-target-container">
-			<h1>Heli Music</h1>
+			<!-- <h1>Heli Music</h1> -->
 			<svg class="audio-target" viewBox="0 0 100 100" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns">
 			    <title>circle</title>
 			    <desc>Created with Sketch.</desc>
