--- a/index.html
+++ b/index.html
@@ -5,17 +5,16 @@
 	<meta name="viewport" content="width=device-width">
 	<title>6 Music Hack</title>
 
-	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script> -->
     <script src="library/js/jquery-2.2.0.js"></script>
     <script src="library/js/jquery-ui/jquery-ui.js"></script>
 	<script src="library/js/howler.js"></script>
 	<script src="library/js/audio.js"></script>
 	<script src="library/js/ui.js"></script>
-	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.js"></script> -->
 
-	<!-- <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jquerymobile/1.4.5/jquery.mobile.min.css"> -->
-	<!-- <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css"> -->
+    <script>
+        $('body').hide();
+    </script>
+
 	<link rel="stylesheet" href="library/css/style.css">
 </head>
 <body>
